# KnobMixer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  KnobMixer.spec  LICENSE  README.md  README.ru.md  ROADMAP.md  SECURITY.md  build.bat  main.py  pyproject.toml  requirements.txt  run.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml
app/: __init__.py  config.py
app/models/: __init__.py  audio_app.py
app/services/: __init__.py  audio_service.py  autostart_service.py  keyboard_hook_service.py  logger_service.py  raw_input_service.py  settings_service.py  tray_service.py
app/ui/: main_window.py  styles.py
docs/: ARCHITECTURE.md  RELEASE.md  TROUBLESHOOTING.md
